Colour palette was coded into the the main.scss file, now placed into varibles.scss

--- a/assets/sass/items/_variables.scss
+++ b/assets/sass/items/_variables.scss
@@ -4,16 +4,15 @@
 
 // ----------- Colors --------- //
 
-$color-primary: #a5d4e2;
-$color-primary-transparent: #a5d4e2ef;
-$color-icon-fill: #339cb1;
-$color-orange: #fd6328;
-$color-pink: #fbd1df;
+$color-primary-orange: #FF9A0D;
+$color-secondary-blue: #A2F2FA;
+$color-green: #339cb1;
+$color-pink: #fd6328;
 
-$color-backgound: #f8f8f8;
+$color-backgound: #f5f5f5;
+
 $color-white-text: #f3f7fb;
-
-$color-grey-text: #707070;
+$color-text: #2b2b2b;
 
 $color-footer: #2b2b2b;
 $color-shadow-large: 0 3rem 6rem rgba(0, 0, 0, 0.16);
