--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,83 @@
+/* -------- Items --------- */
+/* //////////////////////////////////////////////////////////////////////////////// 
+------------------------------- Variables  --------------------------------------
+//////////////////////////////////////////////////////////////////////////////////*/
+/* //////////////////////////////////////////////////////////////////////////////// 
+------------------------------- Typography  --------------------------------------
+//////////////////////////////////////////////////////////////////////////////////*/
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap");
+h1 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 4.8rem;
+  font-weight: 300;
+  color: #ff9a0d;
+}
 
+h2 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 4.8rem;
+  font-weight: 300;
+  color: #ff9a0d;
+}
+
+h3 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 3.4rem;
+  font-weight: 400;
+  color: #2b2b2b;
+}
+
+h4 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 3.4rem;
+  font-weight: 400;
+  line-height: 5rem;
+  color: #f3f7fb;
+}
+
+h5 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.6rem;
+  font-weight: 300;
+  color: #f3f7fb;
+}
+
+p {
+  font-family: "Roboto", sans-serif;
+  font-size: 2rem;
+  color: #2b2b2b;
+}
+
+/* ------- Sections -------- */
+/* //////////////////////////////////////////////////////////////////////////////// 
+-------------------------------- HTML CSS Settings  ---------------------------------
+//////////////////////////////////////////////////////////////////////////////////*/
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
+  background-color: #f5f5f5;
+}
+@media only screen and (max-width: 900px) {
+  html {
+    font-size: 50%;
+  }
+}
+@media only screen and (max-width: 650px) {
+  html {
+    font-size: 40%;
+  }
+}
+
+body {
+  overflow-x: hidden;
+}
 
 /*# sourceMappingURL=style.css.map */
