--- a/assets/sass/items/_typography.scss
+++ b/assets/sass/items/_typography.scss
@@ -2,11 +2,11 @@
 ------------------------------- Typography  --------------------------------------
 //////////////////////////////////////////////////////////////////////////////////*/
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap");
 
-$font-family: 'Roboto', sans-serif;
-$font-family: 'Montserrat', sans-serif;
+$font-primary: "Roboto", sans-serif;
+$font-heading: "Montserrat", sans-serif;
 
 $font-size-copywrite: 0.8rem;
 $font-size-nav: 1.6rem;
@@ -37,7 +37,7 @@ h3 {
   font-family: $font-heading;
   font-size: $font-size-heading-medium;
   font-weight: 400;
-  color: $color-grey-text;
+  color: $color-text;
 }
 
 h4 {
@@ -62,5 +62,5 @@ p {
   // all main copy
   font-family: $font-primary;
   font-size: $font-size-copy;
-  color: $color-grey-text;
+  color: $color-text;
 }
