--- a/assets/sass/items/_variables.scss
+++ b/assets/sass/items/_variables.scss
@@ -4,10 +4,10 @@
 
 // ----------- Colors --------- //
 
-$color-primary-orange: #FF9A0D;
-$color-secondary-blue: #A2F2FA;
-$color-green: #339cb1;
-$color-pink: #fd6328;
+$color-orange: #FF9A0D;
+$color-blue: #A2F2FA;
+$color-green: #64fa6e;
+$color-pink: #f5767a;
 
 $color-backgound: #f5f5f5;
 
