Created the Hero branch

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,14 +11,14 @@ h1 {
   font-family: "Montserrat", sans-serif;
   font-size: 4.8rem;
   font-weight: 300;
-  color: #ff9a0d;
+  color: #FF9A0D;
 }
 
 h2 {
   font-family: "Montserrat", sans-serif;
   font-size: 4.8rem;
   font-weight: 300;
-  color: #ff9a0d;
+  color: #FF9A0D;
 }
 
 h3 {
