--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ h4 {
 
 h5 {
   font-family: "Montserrat", sans-serif;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   font-weight: 300;
   color: #f3f7fb;
 }
@@ -47,6 +47,11 @@ p {
   font-family: "Roboto", sans-serif;
   font-size: 2rem;
   color: #2b2b2b;
+}
+
+.width {
+  max-width: 1366px;
+  margin: 0 auto 0 auto;
 }
 
 /* ------- Sections -------- */
@@ -65,19 +70,38 @@ html {
   font-size: 62.5%;
   background-color: #f5f5f5;
 }
-@media only screen and (max-width: 900px) {
-  html {
-    font-size: 50%;
-  }
-}
-@media only screen and (max-width: 650px) {
-  html {
-    font-size: 40%;
-  }
-}
 
-body {
-  overflow-x: hidden;
+.nav-bar {
+  height: 7rem;
+  position: fixed;
+  z-index: 10;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.4rem;
+  align-items: center;
+}
+.nav-bar a {
+  text-decoration: none;
+  color: #f5767a;
+}
+.nav-bar__logo {
+  margin-left: 2%;
+}
+.nav-bar__links {
+  margin-left: 10rem;
+  text-transform: uppercase;
+}
+.nav-bar__mail {
+  color: #f5767a;
+}
+.nav-bar__links {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+}
+.nav-bar__links-el {
+  margin-left: 2rem;
 }
 
 /*# sourceMappingURL=style.css.map */
