--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ html {
 }
 
 .nav-bar {
-  height: 7rem;
+  height: 6rem;
   position: fixed;
   z-index: 10;
   width: 100%;
@@ -86,7 +86,7 @@ html {
   color: #f5767a;
 }
 .nav-bar__logo {
-  margin-left: 2%;
+  margin-left: 0.3rem;
 }
 .nav-bar__links {
   margin-left: 10rem;
@@ -94,6 +94,7 @@ html {
 }
 .nav-bar__mail {
   color: #f5767a;
+  margin-right: 0.5rem;
 }
 .nav-bar__links {
   display: flex;
@@ -106,7 +107,16 @@ html {
 
 .hero {
   height: 780px;
-  background-color: blue;
+  background-image: url(../images/jpg/hero-img.jpg);
+  background-size: fill;
+  background-repeat: no-repeat;
+  background-position: top;
+  background-position-y: 6rem;
+  display: flex;
+}
+.hero__logo {
+  background-image: url(../images/svg/hero-blue.svg);
+  background-size: cover;
 }
 
 /*# sourceMappingURL=style.css.map */
