--- a/assets/sass/sections/_nav.scss
+++ b/assets/sass/sections/_nav.scss
@@ -1,5 +1,5 @@
 .nav-bar {
-  height: 7rem;
+  height: 6rem;
   position: fixed;
   z-index: 10;
   width: 100%;
@@ -14,16 +14,17 @@
   }
 
   &__logo {
-    margin-left: 2%;
+    margin-left: 0.3rem;
   }
 
   &__links {
-      margin-left: 10rem;
+    margin-left: 10rem;
     text-transform: uppercase;
   }
 
   &__mail {
     color: $color-pink;
+    margin-right: 0.5rem;
   }
 
   &__links {
@@ -32,7 +33,7 @@
     list-style: none;
 
     &-el {
-        margin-left: 2rem;
+      margin-left: 2rem;
     }
   }
 }
