--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,28 +9,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap");
 h1 {
   font-family: "Montserrat", sans-serif;
-  font-size: 4.8rem;
-  font-weight: 300;
+  font-size: 5.8rem;
+  font-weight: 400;
   color: #FF9A0D;
 }
 
 h2 {
   font-family: "Montserrat", sans-serif;
-  font-size: 4.8rem;
-  font-weight: 300;
-  color: #FF9A0D;
+  font-size: 3.5rem;
+  font-weight: 400;
+  color: #f5767a;
 }
 
 h3 {
   font-family: "Montserrat", sans-serif;
-  font-size: 3.4rem;
+  font-size: 3.5rem;
   font-weight: 400;
   color: #2b2b2b;
 }
 
 h4 {
   font-family: "Montserrat", sans-serif;
-  font-size: 3.4rem;
+  font-size: 3.5rem;
   font-weight: 400;
   line-height: 5rem;
   color: #f3f7fb;
@@ -45,13 +45,31 @@ h5 {
 
 p {
   font-family: "Roboto", sans-serif;
-  font-size: 2rem;
+  font-size: 2.4rem;
   color: #2b2b2b;
+}
+
+.btn {
+  color: #fff;
+  background-color: #f5767a;
+  border-radius: 1.5rem;
+  -webkit-border-radius: 1.5rem;
+  -moz-border-radius: 1.5rem;
+  -ms-border-radius: 1.5rem;
+  -o-border-radius: 1.5rem;
+  height: 3.5rem;
+  font-size: 2.4rem;
+  text-align: center;
+  padding-top: 0.7rem;
 }
 
 .width {
   max-width: 1366px;
   margin: 0 auto 0 auto;
+}
+
+.margin {
+  margin-bottom: 3rem;
 }
 
 /* ------- Sections -------- */
@@ -108,15 +126,28 @@ html {
 .hero {
   height: 780px;
   background-image: url(../images/jpg/hero-img.jpg);
-  background-size: fill;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
-  background-position-y: 6rem;
+  background-position-y: -1rem;
   display: flex;
+  justify-content: space-between;
+}
+.hero__info {
+  margin-top: 10rem;
+  margin-right: -20rem;
+  width: 40%;
+}
+.hero__info-heading {
+  font-weight: 400;
+}
+.hero__info-btn {
+  width: 70%;
 }
 .hero__logo {
-  background-image: url(../images/svg/hero-blue.svg);
-  background-size: cover;
+  display: grid;
+  grid-template-rows: 3;
+  width: 70%;
 }
 
 /*# sourceMappingURL=style.css.map */
