--- a/assets/sass/items/_typography.scss
+++ b/assets/sass/items/_typography.scss
@@ -12,24 +12,24 @@ $font-size-copywrite: 0.8rem;
 $font-size-nav: 1.4rem;
 $font-size-copy: 2rem;
 $font-size-copy-heading: 2.4rem;
-$font-size-heading-medium: 3.4rem;
-$font-size-heading: 4.8rem;
+$font-size-heading-medium: 3.5rem;
+$font-size-heading: 5.8rem;
 $font-size-heading-large: 8rem;
 
 h1 {
   // Logo text
   font-family: $font-heading;
   font-size: $font-size-heading;
-  font-weight: 300;
+  font-weight: 400;
   color: $color-orange;
 }
 
 h2 {
   // How it works
   font-family: $font-heading;
-  font-size: $font-size-heading;
-  font-weight: 300;
-  color: $color-orange;
+  font-size: $font-size-heading-medium;
+  font-weight: 400;
+  color: $color-pink;
 }
 
 h3 {
@@ -61,6 +61,6 @@ h5 {
 p {
   // all main copy
   font-family: $font-primary;
-  font-size: $font-size-copy;
+  font-size: $font-size-copy-heading;
   color: $color-text;
 }
