Added the play button to the HTML, on click animate is working

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,23 @@ p {
   padding-top: 0.7rem;
 }
 
+svg {
+  padding-top: 10vh;
+  margin: 0px auto;
+  display: block;
+}
+
+/* This animates the circle when it switches to play */
+#circle {
+  transition: stroke-dashoffset 300ms ease-in;
+  stroke-dashoffset: 0;
+  fill: none;
+}
+
+#circle.play {
+  stroke-dashoffset: 314;
+}
+
 .width {
   max-width: 1366px;
   margin: 0 auto 0 auto;
@@ -177,6 +194,11 @@ html {
 }
 .hero__logo-btn-inactive span {
   font-size: 1.6rem;
+}
+
+.form {
+  height: 1000px;
+  display: flex;
 }
 
 /*# sourceMappingURL=style.css.map */
