Added the function to change the state of the play button on page load

--- a/assets/sass/sections/_form.scss
+++ b/assets/sass/sections/_form.scss
@@ -1,5 +1,14 @@
 .form {
   height: 1000px;
   display: flex;
-//   flex-direction: column;
+  &__text{
+    &-btn{
+
+    }
+  }
+&__video{
+    &-play{
+        
+    }
+}
 }
