--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,7 @@ html {
 }
 
 .nav-bar {
-  height: 6rem;
+  height: 5rem;
   position: fixed;
   z-index: 10;
   width: 100%;
@@ -145,7 +145,7 @@ html {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
-  background-position-y: 7rem;
+  background-position-y: 5rem;
   display: flex;
   justify-content: space-between;
 }
@@ -196,8 +196,34 @@ html {
 }
 
 .form {
-  height: 1000px;
+  height: 900px;
   display: flex;
+  justify-content: center;
+}
+.form__text {
+  justify-content: center;
+  width: 50%;
+  margin-top: 20rem;
+  text-align: center;
+}
+.form__text-header {
+  width: 60%;
+  margin: 0 auto 6rem auto;
+}
+.form__text-p {
+  width: 60%;
+  margin: 0 auto 6rem auto;
+}
+.form__text-btn {
+  width: 60%;
+  margin: auto;
+}
+.form__video {
+  margin: auto;
+  padding: 3rem;
+}
+.form__video-play {
+  margin-top: 3rem;
 }
 
 /*# sourceMappingURL=style.css.map */
