--- a/assets/sass/sections/_form.scss
+++ b/assets/sass/sections/_form.scss
@@ -1,14 +1,31 @@
 .form {
-  height: 1000px;
+  height: 900px;
   display: flex;
-  &__text{
-    &-btn{
+  justify-content: center;
 
+  &__text {
+    justify-content: center;
+    width: 50%;
+    margin-top: 20rem;
+    text-align: center;
+    &-header {
+      width: 60%;
+      margin: 0 auto 6rem auto;
+    }
+    &-p {
+      width: 60%;
+      margin: 0 auto 6rem auto;
+    }
+    &-btn {
+      width: 60%;
+      margin: auto;
     }
   }
-&__video{
-    &-play{
-        
+  &__video {
+    margin: auto;
+    padding: 3rem;
+    &-play {
+      margin-top: 3rem;
     }
-}
+  }
 }
