--- a/assets/sass/items/_variables.scss
+++ b/assets/sass/items/_variables.scss
@@ -13,6 +13,7 @@ $color-backgound: #f5f5f5;
 
 $color-white-text: #f3f7fb;
 $color-text: #2b2b2b;
+$color-text-card: #0a0a0a;
 
 $color-footer: #2b2b2b;
 $color-shadow-large: 0 3rem 6rem rgba(0, 0, 0, 0.16);
