--- a/assets/sass/sections/_nav.scss
+++ b/assets/sass/sections/_nav.scss
@@ -7,6 +7,7 @@
   justify-content: space-between;
   font-size: $font-size-nav;
   align-items: center;
+  background-color: rgba(#fff, 0.4);
 
   a {
     text-decoration: none;
