--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -349,6 +349,42 @@ html {
   margin-left: 10%;
 }
 
+.footer {
+  height: 250px;
+  background-color: #2b2b2b;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.footer__logo {
+  display: flex;
+  justify-content: center;
+}
+.footer__social {
+  display: flex;
+  justify-content: center;
+  font-size: 5rem;
+  margin: 2rem 0 2rem -2rem;
+}
+.footer__contact {
+  display: flex;
+  justify-content: center;
+  color: #fff;
+  font-size: 2rem;
+}
+.footer__contact-link {
+  color: #fff;
+  margin-left: 1rem;
+}
+
+.fab {
+  color: #fff;
+}
+
+.fa-facebook-f {
+  margin-left: 8rem;
+}
+
 .about {
   height: 600px;
   background-image: url(../images/svg/blue.svg);
