--- a/assets/sass/sections/_form.scss
+++ b/assets/sass/sections/_form.scss
@@ -2,12 +2,19 @@
   height: 900px;
   display: flex;
   justify-content: center;
+  @media screen and (max-width:$bp-form){
+    flex-direction: column;
+    width: 100%;
+  }
 
   &__text {
     justify-content: center;
     width: 50%;
     margin-top: 20rem;
     text-align: center;
+    @media screen and (max-width:$bp-form){
+      width: 100%;
+    }
     &-header {
       width: 60%;
       margin: 0 auto 6rem auto;
@@ -16,14 +23,24 @@
       width: 60%;
       margin: 0 auto 6rem auto;
     }
-    &-btn {
-      width: 60%;
-      margin: auto;
+    &__btn {
+      display: flex;
+
+
+      &-btn {
+        width: 60%;
+        margin: auto;
+      }
     }
   }
   &__video {
     margin-top: 15rem;
     padding: 3rem;
+    @media screen and (max-width:$bp-form){
+      margin: 0;
+      padding: 0;
+      width: 100%;
+    }
     &-play {
       margin-top: 3rem;
     }
