--- a/assets/sass/sections/_hero.scss
+++ b/assets/sass/sections/_hero.scss
@@ -8,10 +8,20 @@
   display: flex;
   justify-content: space-between;
 
+  @media screen and (max-width: $bp-form) {
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+  }
+
   &__info {
     margin-top: 10rem;
     margin-right: -20rem;
     width: 40%;
+    text-shadow: 2px 1px rgb(113, 113, 113);
+    width: 100%;
+    
+
     &-heading {
       font-weight: 400;
     }
@@ -19,18 +29,35 @@
     }
     &-p {
     }
-    &-btn {
-      width: 70%;
-      margin-top: 9rem;
+    &__btn {
+      width: 100%;
+      display: flex;
+      height: 20%;
+
+      &-btn {
+        margin-top: auto;
+        width: 60%;
+        text-decoration: none;
+      }
     }
   }
   &__logo {
     display: grid;
-    grid-template-rows: 3;
     width: 70%;
     margin-top: -1rem;
+
     &-main {
+      @media screen and (max-width: $bp-large) {
+        content: url("/assets/images/svg/hero_small.svg");
+        margin-left: 20rem;
+        width: 90%;
+      }
+
+      @media screen and (max-width: $bp-form) {
+        content: url("");
+      }
     }
+
     &-btn {
       margin-top: -28%;
       padding-left: 28%;
@@ -38,6 +65,11 @@
       text-transform: uppercase;
       margin-left: auto;
       display: flex;
+
+      @media screen and (max-width: $bp-large) {
+        justify-content: center;
+        margin-left: -5%;
+      }
       &-cook {
         margin-top: -2.1rem;
       }
@@ -52,6 +84,11 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+
+        @media screen and (max-width: $bp-large) {
+          height: 5rem;
+          width: 13rem;
+        }
 
         img {
           margin-bottom: 1rem;
