--- a/assets/sass/sections/_price.scss
+++ b/assets/sass/sections/_price.scss
@@ -1,5 +1,5 @@
 .price {
-  height: 800px;
+  height: 850px;
   &__header {
     text-align: center;
     text-transform: uppercase;
@@ -52,10 +52,22 @@
       height: 6rem;
       display: flex;
       justify-content: center;
+      text-decoration: none;
       span {
         margin: auto;
         text-transform: uppercase;
       }
+    }
+  }
+  &__button {
+    display: flex;
+    width: 100%;
+    height: 200px;
+    
+    &-btn {
+      text-decoration: none;
+      margin: auto;
+      width: 30%;
     }
   }
 }
